Fix bottom spacing of messages

--- a/client/message.css
+++ b/client/message.css
@@ -14,7 +14,7 @@ input.title { width: 100%; }
 .messageTitle { display: inline-block; padding: 5px 5px 5px 0px; }
 .messageTags > a:first-child, .messageLabels > span:first-child { margin-left: 0.5em; }
 input.title ~ .message-right-buttons { margin: 0px; }
-.message-reply-buttons { margin-right: 1em; }
+.message-reply-buttons { margin-right: 1em; margin-bottom: 15px; }
 .fileDescription { padding: 0.5ex 0.5em; border-bottom: 1px solid #337ab7;
   display: flex; flex-direction: row;
   justify-content: space-between; align-items: center; }
@@ -27,7 +27,7 @@ input.title ~ .message-right-buttons { margin: 0px; }
   /* 300px matches .CodeMirror's height */
 .ace_editor { width: 100%; height: 20em; }
 
-.children { margin-top: 1.5ex; margin-left: 1em; }
+.children { margin-left: 1em; }
 
 /* Magic to get the entire tag to highlight when hovering over child:
  * http://stackoverflow.com/questions/8114657/how-to-style-the-parent-element-when-hovering-a-child-element#30104683
